2014-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (match_in_match_list): Arguments changed.  Output
	index of match in list.
	(info_search_in_node_internal): Argument removed.  Always return start
	of match.  All callers updated.  Check whether to set cursor point at
	end of match.
	(info_search_internal): Arguments changed.  All callers updated.

2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (ask_for_search_string): Split out from
	info_search_1.
	(incremental_search): Remove check on local variable for non-regexp
	searches.
	
2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Code after 'after_search' label
	moved to start of loop.
	'insert_and_search' label removed.  Use conditionals instead of goto.
	Combine two conditionals handling C-g press.
	Move conditional construct checking what a pressed key meant up a
	level.  Remove 'search_now' and 'exit_search' labels.

2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (match_in_match_list, info_search_1)
	(incremental_search)
	Consistently name 'resbnd' arguments and local variables which are
	SEARCH_BINDING's giving the result of a search.

2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_info_keys): Display RET, PgUp,
	PgDown in help message.
	* info/info.c (info_short_help): Say to show key bindings with "H"
	instead of "h".

	* info/session.c (forget_node): Permit removing last node from window.
	(info_history_node): Check we are not removing the last node, and
	display an error message if that is the case.
	* info/echo-area.c (ea_possible_completions): Remove completion nodes
	from window history.

2014-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_expand_newlines_and_tabs): Split out from
	regexp_search.
	(regexp_search): Arguments changed.  Check if search was the same as
	last time moved to calling code.