@@ -1,3 +1,13 @@
+2014-08-10  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/search.c (regexp_search): Arguments changed.  Don't take
+	WINDOW argument.
+	* info/info-utils.c (scan_node_contents)
+	* info/session.c (info_search_in_node_internal)
+	Call to regexp_search updated.
+	* info/session.c (match_in_match_list): Don't take WINDOW argument.
+	Callers updated.
+
 2014-08-09  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/session.c (match_in_match_list): Arguments changed.  Output
